--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
     border: 1px solid black;
 }
 
+
 .brg1 {
     background-color: var(--brg-nav);
     
@@ -43,6 +44,10 @@
     
 }
 
+main {
+    margin-top: 40px;
+}
+
 a {
     padding-left: 5px;
     text-decoration: none;
@@ -62,12 +67,85 @@ a {
    padding: 5px;
    color: white;
 }
+.absolute-h {
+    position: absolute;
+    top:10px;
+    right: 0px;
+    background-color: white;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    font-size: 20px;
+}
+
+.sconto {
+    position: absolute;
+    bottom:100px;
+    left: 0px;
+    background-color: var(--brg-sconto);
+    color: white;
+    width: 50px;
+    height: 25px;
+    padding-top: 4px;
+    text-align: center;
+    
+}
+
+.sostenibilità {
+    position: absolute;
+    bottom:100px;
+    left: 54px;
+    background-color: var(--brg-sost);
+    color: white;
+    width: 85px;
+    height: 25px;
+    padding-top: 4px;
+    text-align: center;
+
+}
+.sostenibilità2 {
+    position: absolute;
+    bottom:100px;
+    left:0px;
+    background-color: var(--brg-sost);
+    color: white;
+    width: 85px;
+    height: 25px;
+    padding-top: 4px;
+    text-align: center;
+}
+
 
 .card {
     max-width: 100%;
-    height: 520px;
-    
+    height: 500px;
+    display: block;
+   
 }
+
+.relative {
+    position: relative;
+
+}  
+
+
+
+.hover-img {
+    max-width: 100%;
+    height: 500px;
+    display: none;
+ }
+
+.relative:hover .card {
+    display: none;
+}
+
+.realitve:hover .hover-img {
+    display: block;
+}
+
+
+
 
 p {
   font-size: 12px;
