--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@
 
 .brg1 {
     background-color: var(--brg-nav);
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 99;
     
 }
 .container-2 {
@@ -115,36 +119,41 @@ a {
     text-align: center;
 }
 
-
-.card {
-    max-width: 100%;
+.img1 {
+    width: 100%;
     height: 500px;
     display: block;
-   
+}
+
+.img2 {
+    width: 100%;
+    height: 500px;
+    display: none;
+
 }
 
 .relative {
+  padding-top: 15px;
+    
+}
+
+.card {
     position: relative;
-
-}  
-
-
-
-.hover-img {
-    max-width: 100%;
-    height: 500px;
-    display: none;
- }
-
-.relative:hover .card {
-    display: none;
+    margin: 10px;
 }
 
-.realitve:hover .hover-img {
+
+.card:hover .img1 {
+     display: none;
+}
+
+.card:hover .img2 {
     display: block;
+    
+    
+    
+    
 }
-
-
 
 
 p {
